# Dbssert

./: .gitignore  README.md  dbssert.duckdb  flake.nix  pyproject.toml
lib/dbssert/: dbssert.py
nix/: shell.nix
