[build-system]
requires = [
  "setuptools>=80.9.0",
  "wheel>=0.45.1"
]
build-backend = "setuptools.build_meta"

[project]
name = "dbssert"
version = "1.0.0"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["lib"]

[project.scripts]
dbssert-cli = "dbssert.dbssert:CLI"